[package]
name = "rustflow"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/rustflow-server",
    "crates/rustflow-common",
]

# Shared dependency versions — all crates inherit from here
[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }